@@ -2,6 +2,9 @@ Changelog
 
 $Id: Changes,v 1.92 2011-04-12 18:12:31 oops Exp $
 
+* Sat, Apr 30 2011
+	- enhanced olibc.m4
+
 * Wed, Apr 13 2011
 	- add olibc m4 script
 	- enable set null on last argument of preg_replace api
